maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:46: error: value indice is not a member of Unit
    	println indice
                ^